Sheet AI(취업할수있겠조)/final-project-backend/src/main/java/com/example/finalproject/exception/error/FinancialDataParseException.java
package com.example.finalproject.exception.error;

public class FinancialDataParseException extends RuntimeException {
    public FinancialDataParseException(String message) {
        super(message);
    }
}
